# dinov2

./: .gitignore  AGENTS.md  pyproject.toml
dinov2/hub/: AGENTS.md
dinov2/layers/: AGENTS.md
dinov2/models/: AGENTS.md
extract_feature/: AGENTS.md  GUIDE.md  analyze_image_subset_diversity.py  analyze_robotwin_diversity.py  analyze_video_subset_diversity.py  diversity_metrics.py  extract_image_features.py  extract_video_features.py  manage_local_datasets.py  plotting_utils.py  robotwin_loader.py  select_episodes.py  subset_sampling.py
report/: 2026-03-05_dinov2_env_setup_and_feature_extraction.md
report/coop/: 2026-03-05_dinov2_env_setup_and_feature_extraction.md
